--- a/css/a.css
+++ b/css/a.css
@@ -1,4 +1,4 @@
-body,ul {
+* {
     margin: 0;
     padding: 0;
 }
@@ -6,11 +6,13 @@ a {
     text-decoration: none;
 }
 body {
-    background-color: #000;
-    color: white;
+    background-color: #efefef;
 }
+/*topNavBar --s*/
 .topNavBar {
-    padding: 20px 16px;
+    padding: 20px 0px;
+    position: fixed;
+    width:100%;
 }
 .clearfix::after {
     content: "";
@@ -24,6 +26,7 @@ body {
     height: 40px;
     line-height: 40px;
     font-weight: bold;
+    margin-left: 17px;
 }
 .topNavBar .logo .rs {
     color: rgb(230, 104, 106);
@@ -58,3 +61,95 @@ body {
 .topNavBar nav ul li a:hover {
     border-bottom: 3px solid #e06567;
 }
+/* topNavBar--end */
+/* banner --s */
+.banner {
+    height: 515px;
+    background-image: url(../image/banner-bg.jpg);
+    background-size: cover;
+    background-position: -50% center;
+}
+.banner .mask {
+    height: 515px;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+/* banner --end */
+/* main --s */
+main .card {
+    max-width: 940px;
+    border: 1px solid red;
+    margin: 0 auto;
+    background-color: #fff;
+}
+main .card .picture {
+    float: left;
+    margin: 50px 65px 55px 50px;
+}
+main .card .text {
+    float: left;
+    margin-top: 50px;
+    width: 470px;
+}
+main .card .text .welcome {
+    display: inline-block;
+    background-color: rgb(230, 104, 106);
+    padding: 4px 16px;
+    position: relative;
+    margin-bottom: 18px;
+    color: white;
+}
+main .card .text .welcome .triangle {
+    display: block;
+    width: 0px;
+    border: 10px solid transparent;
+    border-left-color: rgb(230, 104, 106);
+    border-top: none;
+    position: absolute;
+    top: 100%;
+    left: 4px;
+}
+main .card .text h1 {
+
+}
+main .card hr {
+    height: 0;
+    border: none;
+    border-top: 1px solid #DEDEDE;
+    margin: 20px 0;
+}
+main .card .text dl {
+    font-size: 20px;
+}
+main .card .text dl dt,
+main .card .text dl dd {
+    float: left;
+    margin: 8px 0;
+}
+main .card .text dl dt {
+    width:30%;
+    font-weight: bold;
+}
+main .card .text dl dd {
+    width: 70%;
+}
+main .card footer {
+    background-color: #E6686A;
+    text-align: center;
+}
+main .card footer a {
+    display: inline-block;
+    width: 40px;
+    padding: 5px 0;
+    border-radius: 50%;
+    margin: 10px 16px;
+}
+main .card footer a:hover {
+    background-color: #CF5D5F;
+}
+main .card footer svg {
+    width: 30px;
+    height: 30px;
+    fill: white;
+}
+
+/* main --end */
