--- a/css/a.css
+++ b/css/a.css
@@ -5,6 +5,9 @@
 a {
     text-decoration: none;
 }
+ul,li {
+    list-style: none;
+}
 body {
     background-color: #efefef;
 }
@@ -28,22 +31,28 @@ body {
     font-weight: bold;
     margin-left: 17px;
 }
+
 .topNavBar .logo .rs {
     color: rgb(230, 104, 106);
 }
+
 .topNavBar .logo .card {
     color: rgb(154, 157, 162);
 
 }
+
 .topNavBar nav {
     float: right;
 }
+
 .topNavBar nav ul {
     list-style: none;
 }
+
 .topNavBar nav ul li {
     display: inline-block;
 }
+
 .topNavBar nav ul li a {
 
     font-size: 12px;
@@ -58,9 +67,11 @@ body {
     line-height: 24px;
     font-weight: bold;
 }
+
 .topNavBar nav ul li a:hover {
     border-bottom: 3px solid #e06567;
 }
+
 /* topNavBar--end */
 /* banner --s */
 .banner {
@@ -69,26 +80,35 @@ body {
     background-size: cover;
     background-position: -50% center;
 }
+
 .banner .mask {
     height: 515px;
     background-color: rgba(0, 0, 0, 0.7);
 }
 /* banner --end */
 /* main --s */
+main {
+    margin-top: -345px;
+}
+
 main .card {
     max-width: 940px;
     margin: 0 auto;
     background-color: #fff;
+    box-shadow: 0px 2px 5px 1px #A8A8A8;
 }
+
 main .card .picture {
     float: left;
     margin: 50px 65px 55px 50px;
 }
+
 main .card .text {
     float: left;
     margin-top: 50px;
     width: 470px;
 }
+
 main .card .text .welcome {
     display: inline-block;
     background-color: rgb(230, 104, 106);
@@ -97,6 +117,7 @@ main .card .text .welcome {
     margin-bottom: 18px;
     color: white;
 }
+
 main .card .text .welcome .triangle {
     display: block;
     width: 0px;
@@ -107,27 +128,33 @@ main .card .text .welcome .triangle {
     top: 100%;
     left: 4px;
 }
+
 main .card hr {
     height: 0;
     border: none;
     border-top: 1px solid #DEDEDE;
     margin: 20px 0;
 }
+
 main .card .text dl {
     font-size: 20px;
 }
+
 main .card .text dl dt,
 main .card .text dl dd {
     float: left;
     margin: 8px 0;
 }
+
 main .card .text dl dt {
     width:30%;
     font-weight: bold;
 }
+
 main .card .text dl dd {
     width: 70%;
 }
+
 main .card footer {
     background-color: #E6686A;
     text-align: center;
@@ -139,13 +166,167 @@ main .card footer a {
     border-radius: 50%;
     margin: 10px 16px;
 }
+
 main .card footer a:hover {
     background-color: #CF5D5F;
 }
+
 main .card footer svg {
     width: 30px;
     height: 30px;
     fill: white;
 }
 
-/* main --end */
+main .downloadResume {
+    text-align: center;
+}
+
+main .downloadResume a {
+    display: inline-block;
+    font-size: 14px;
+    color: #3D4451;
+    font-weight: bold;
+    width: 200px;
+    line-height: 60px;
+    border:1px solid #CDCFD1;
+    border-radius:2px;
+    vertical-align: top;
+    margin-top: 32px;
+    letter-spacing: 8px;
+}
+
+main .downloadResume a:hover {
+    box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.3);
+    transform: all 0.5s;
+}
+
+main .selfIntroduction {
+    max-width: 940px;
+    margin: 32px auto 60px auto;
+    text-align: center;
+    font-family: "楷体";
+    line-height: 1.8;
+}
+/* main--end */
+/* skills--s */
+section {
+    max-width: 940px;
+    margin: 0 auto;
+}
+
+section h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+section.skills ol {
+    background-color: #fff;
+    padding-top: 42px;
+    padding-bottom: 23px;
+    margin-bottom: 65px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+section.skills ol li {
+    box-sizing: border-box;
+    float: left;
+    width: 50%;
+    padding-bottom: 26px;
+}
+
+section.skills ol li:nth-child(odd) {
+    padding-left: 50px;
+    padding-right: 25px;
+}
+
+section.skills ol li:nth-child(even) {
+    padding-left: 25px;
+    padding-right: 50px
+}
+
+section.skills .expBar {
+    height: 5px;
+    background-color: #FAE1E1;
+    border-radius: 2px;
+}
+
+section.skills .exp {
+    background-color: #E6686A;
+    height: 100%;
+    width: 50%;
+    border-radius: 2px;
+}
+/* skills --end */
+/* works --s */
+section.works {
+    max-width: 940px;
+                                       margin-bottom: 100px;
+}
+
+section.works nav ol {
+    text-align: center;
+}
+
+section.works nav li {
+    display: inline-block;
+    vertical-align: top;
+    cursor: pointer;
+    padding: 0 21px;   
+}
+
+section.works nav .decorationBar {
+    width: 320px;
+    height: 5px;
+    margin: 5px auto;
+    margin-bottom: 27px;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+}
+
+section.works nav .decorationBar .item {
+    height: 100%;
+    background-color: #E6686A;
+    transition: all 0.3s;
+    border-radius: 2px;
+}
+
+section.works nav .decorationBar .item1 {
+    width:40px;
+}
+
+section.works nav .decorationBar .item2 {
+    width:40px;
+    margin-left: 78px;
+}
+
+section.works nav .decorationBar .item3 {
+    width:165px;
+    margin-left: 156px;
+}
+
+section.works .jobs {
+    position: relative;
+    font-size: 0px;
+    height: 597px;
+}
+
+section.works .jobs1,
+section.works .jobs2,
+section.works .jobs3 {
+    position: absolute;
+}
+
+section.works .jobs1 {
+    top: 0;
+    left: 0;
+}
+
+section.works .jobs2 {
+    top: 0;
+    right: 0;
+}
+
+section.works .jobs3 {
+    bottom: 0;
+    right: 0;
+}
