--- a/css/a.css
+++ b/css/a.css
@@ -271,7 +271,8 @@ section.works nav li {
     display: inline-block;
     vertical-align: top;
     cursor: pointer;
-    padding: 0 21px;   
+    padding: 0 21px;
+    font-size: 16px;  
 }
 
 section.works nav .decorationBar {
