--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,11 @@ a {
 ul,li {
     list-style: none;
 }
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
 body {
     background-color: #efefef;
 }
@@ -15,13 +20,16 @@ body {
 .topNavBar {
     padding: 20px 0px;
     position: fixed;
+    z-index: 10;
     width:100%;
+    transition: all 1s;
 }
-.clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
+.topNavBar.scroll {
+    background-color: white;
+    box-shadow: 0 0 1px 3px grey;
+    padding: 10px 0;
 }
+
 .topNavBar .logo {
     float: left;
     font-family: "Arial Black";
@@ -45,31 +53,39 @@ body {
     float: right;
 }
 
-.topNavBar nav ul {
-    list-style: none;
-}
-
 .topNavBar nav ul li {
-    display: inline-block;
+    float: left;
+    margin: 0 17px;
+    position: relative;
 }
 
 .topNavBar nav ul li a {
 
     font-size: 12px;
     color: rgb(183, 183, 183);
-    border-bottom: 3px solid transparent;
-    border-top: 3px solid transparent;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    margin: 0 17px;
     display: block;
-    height: 24px;
-    line-height: 24px;
+    height: 40px;
+    line-height: 40px;
     font-weight: bold;
 }
 
-.topNavBar nav ul li a:hover {
-    border-bottom: 3px solid #e06567;
+.topNavBar nav ul li.active::after {
+    content: '';
+    display: block;
+    height: 3px;
+    width:100%;
+    position: absolute;
+    top: 32px;
+    background: #e06567;
+    animation: menuSlide .5s;
+}
+@keyframes menuSlide {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
 }
 
 /* topNavBar--end */
@@ -260,7 +276,6 @@ section.skills .exp {
 /* works --s */
 section.works {
     max-width: 940px;
-                                       margin-bottom: 100px;
 }
 
 section.works nav ol {
