--- a/css/index.css
+++ b/css/index.css
@@ -139,6 +139,15 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
 }
 /* banner --end */
+/* 进入动画类开始 */
+[data-x]{
+    transform: translateY(0px);
+    transition: all 1s;
+}
+[data-x].slide{
+    transform: translateY(100px);
+}
+/* 进入动画类结束 */
 /* main --s */
 main {
     margin-top: -345px;
@@ -301,6 +310,7 @@ section.skills .expBar {
     height: 5px;
     background-color: #FAE1E1;
     border-radius: 2px;
+    overflow: hidden;
 }
 
 section.skills .exp {
@@ -308,7 +318,13 @@ section.skills .exp {
     height: 100%;
     width: 50%;
     border-radius: 2px;
+    transition: all 2s;
 }
+
+section.slide.skills .exp {
+    transform: translate(-100%);
+}
+
 /* skills --end */
 /* works --s */
 section.works {
